app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hoteler-namespace
  name: hoteler-web-react
  labels:
    app: hoteler-web-react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hoteler-web-react
  template:
    metadata:
      labels:
        app: hoteler-web-react
      name: hoteler-web-react
    spec:
      containers:
        - name: hoteler-web-react
          image: hoteler-web-react
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: '200m'
              memory: '256Mi'
            requests:
              cpu: '100m'
              memory: '128Mi'
---
apiVersion: v1
kind: Service
metadata:
  namespace: hoteler-namespace
  name: hoteler-web-react
  labels:
    app: hoteler-web-react
spec:
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30003
  type: NodePort
  selector:
    app: hoteler-web-react
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hoteler-namespace
  name: hoteler-web-react
spec:
  rules:
    - host: hoteler-react.damingerdai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hoteler-web-react
                port:
                  number: 80
